# BeerQRLabels

./: LICENSE  README.md  pyproject.toml
BeerJSON/: README.md
beerqrlabels/: cap_qrcode_generator.py
